# rknn-vit-tracker-rust

./: Cargo.toml
models/: object_tracking_vittrack_2023sep.rknn
src/: lib.rs  main.rs  postprocess.rs  preprocess.rs  rknn.rs  tracker.rs
